checkpoint .. in the middle of convering reference integration from polymer engine

--- a/src/Magnum/OpenvrIntegration/CMakeLists.txt
+++ b/src/Magnum/OpenvrIntegration/CMakeLists.txt
@@ -36,6 +36,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/configure.h.cmake
 
 set(MagnumOpenvrIntegration_SRCS
         VRSystem.cpp
+        OpenvrHMD.cpp
 #        Context.cpp
 #        Enums.cpp
 #        Session.cpp
@@ -43,6 +44,8 @@ set(MagnumOpenvrIntegration_SRCS
 
 set(MagnumOpenvrIntegration_HEADERS
         VRSystem.h
+        HmdBase.h
+        OpenvrHMD.h
 #        Context.h
 #        Enums.h
         OpenvrIntegration.h
